# ancient-pythons

./: .gitignore  .travis.yml  README.md  make.py  make0x.py
.github/workflows/: main.yml
python-0.9.1/: README.reconstructed
python-0.9.1/src/: intobject.c  parser.c
python-1.0.1/: .gitignore  Makefile.in  README  config.h.in  configure  configure.in
python-1.0.1/Demo/: mpzpi.py
python-1.0.1/Demo/ibrowse/: MANIFEST
python-1.0.1/Demo/p2c/: README  p2c.py  testf.c  testf.py
python-1.0.1/Demo/rsa/: assert.py  binary.py  engine.py  merge.py  rabin_miller.py  report.py  rsademo.py  smallprimes.py  sparcearr.py
python-1.0.1/Demo/sgi/cl/: imageview.py  lin2ulaw.py  rgbtojpeg.py
python-1.0.1/Demo/sgi/dal/: alwatch.py  dal.py  dald.py  dalxdr.py
python-1.0.1/Demo/sgi/gl/glstdwin/: MANIFEST  TAGS
python-1.0.1/Demo/stoffel/: Animal.py  Commuter.py  Last_Wed.T  Last_Wed.py  Turin2Py.py
python-1.0.1/Demo/threads/: XXX
python-1.0.1/Doc/: Makefile  README  ext.tex  fix.el  lib.tex  myformat.sty  ref.tex  ref1.tex  ref2.tex  ref3.tex  ref4.tex  ref5.tex  ref6.tex  ref7.tex  tut.tex
python-1.0.1/Ext-dummy/: README
python-1.0.1/Include/: assert.h  bltinmodule.h  ceval.h  errors.h  fileobject.h  frameobject.h  funcobject.h  listobject.h  modsupport.h  object.h  opcode.h  osdefs.h  stringobject.h  tokenizer.h
python-1.0.1/Lib/: os.py  rfc822.py  string.py  tzparse.py
python-1.0.1/Lib/test/: test_grammar.py
python-1.0.1/Modules/: Makefile.pre.in  Setup.in  Setup.irix4  Setup.solaris2  Setup.sunos4  almodule.c  arraymodule.c  cdmodule.c  config.c.in  dbmmodule.c  dosmodule.c  makesetup  mathmodule.c  mpzmodule.c  nismodule.c  parsermodule.c  posixmodule.c  pwdmodule.c  regexmodule.c  rgbimgmodule.c  rotormodule.c  selectmodule.c  socketmodule.c  stropmodule.c  svmodule.c  threadmodule.c  timemodule.c  timing.h  timingmodule.c
python-1.0.1/Objects/: classobject.c  fileobject.c  floatobject.c  frameobject.c  funcobject.c  intobject.c  listobject.c  longobject.c  mappingobject.c  object.c  stringobject.c  tupleobject.c
python-1.0.1/Parser/: acceler.c  intrcheck.c  myreadline.c  parsetok.c  pgenmain.c  tokenizer.c
python-1.0.1/Python/: Makefile.in  bltinmodule.c  ceval.c  compile.c  errors.c  frozenmain.c  import.c  marshal.c  modsupport.c  mystrtoul.c  pythonmain.c  pythonrun.c  strerror.c  strtod.c  structmember.c  thread.c  traceback.c  version.c
python-1.0.1/readline/: Makefile  readline.c
python-1.1/: ChangeLog  acconfig.h  config.h.in  configure  configure.in
python-1.1/Dos/: BUILD  config.c  config.h  dosmodule.c  pcmodule.c  system.c
python-1.1/Extensions/: README  README.TOO
python-1.1/Lib/: Audio_mac.py
python-1.1/Misc/: dlMakefile
python-1.1/Modules/: timingmodule.c
python-1.1/Nt/: PYTHON.NT.TXT  make.nt.bat  make.nt.in  pmake.nt.bat
python-1.1/Objects/: fileobject.c
python-1.1/Python/: getargs.c
python-1.2/: config.h.in  configure  configure.in
python-1.2/Contrib/: FSM.py  README  dns2netgroup.py
python-1.2/Lib/: newimp.py
python-1.2/Misc/: cheatsheet
python-1.2/Modules/: timing.h
python-1.2/Objects/: fileobject.c
python-1.3/: config.h.in  configure  configure.in
python-1.3/Contrib/: README
python-1.3/Dos/: ONSYSTEM  README  config.c  config.dj  config.qw  dosmodule.c  make.bat  pcmodule.c  python.mak  rmcr.py
python-1.3/Misc/: FAQ.html
python-1.3/Nt/: Makefile.in  config.h
python-1.3/Objects/: fileobject.c
python-1.4/: config.h.in  configure  configure.in
python-1.4/Lib/: AST.py
python-1.4/Misc/: FAQ
python-1.4/Modules/: parsermodule.c
python-1.4/Objects/: fileobject.c
python-1.4/PC/: dllbase_nt.txt  make_nt.in  vc40.mak
python-1.5.2/: configure.in
python-1.5.2/Misc/: ccpy-style.el  python-mode.el
python-1.5.2/Objects/: fileobject.c
python-1.5.2/PCbuild/: readme.txt
python-1.6/: LICENSE  Makefile.in  README  configure  configure.in
python-1.6/Doc/: Makefile  README
python-1.6/Include/: Python.h  bitset.h  bufferobject.h  ceval.h  classobject.h  cobject.h  compile.h  dictobject.h  errcode.h  eval.h  fileobject.h  floatobject.h  frameobject.h  funcobject.h  grammar.h  import.h  intobject.h  intrcheck.h  listobject.h  longintrepr.h  longobject.h  marshal.h  methodobject.h  modsupport.h  moduleobject.h  mymalloc.h  myproto.h  myselect.h  mytime.h  node.h  object.h  objimpl.h  opcode.h  osdefs.h  parsetok.h  patchlevel.h  pgenheaders.h  pydebug.h  pyerrors.h  pystate.h  (+9 more)
python-1.6/Lib/: imputil.py  pickle.py  sre_parse.py
python-1.6/Misc/: NEWS  python-mode.el
python-1.6/Modules/: Setup.in  _cursesmodule.c  _localemodule.c  _tkinter.c  almodule.c  arraymodule.c  audioop.c  binascii.c  bsddbmodule.c  cdmodule.c  cgen.py  cgensupport.c  cgensupport.h  clmodule.c  config.c.in  cstubs  dbmmodule.c  dlmodule.c  errnomodule.c  fcntlmodule.c  flmodule.c  getpath.c  (+30 more)
(+364 files in other folders)
